--- a/calculator_landscape.html
+++ b/calculator_landscape.html
@@ -24,7 +24,7 @@
             <div class="row mx-auto m-2">
                 <div class="col-6">
                     <div class="row m-2 justify-content-center" >
-                        <div class="col-2 text- align-content-center btn" onclick="window.open('new1.html')">
+                        <div class="col-2 text- align-content-center btn" onclick="window.open('calculator_potrait.html')">
                             <i class="bi bi-phone-landscape"></i>
                         </div>
                     </div>
