--- a/calculator_potrait.html
+++ b/calculator_potrait.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="row justify-content-end m-2">
-                <div class="col-2 text- align-content-center btn" onclick="window.open('new.html')">
+                <div class="col-2 text- align-content-center btn" onclick="window.open('calculator_landscape.html')">
                     <i class="bi bi-phone-landscape"></i>
                 </div>
                 <div class="col-3 btn btn-dark border-white rounded-2" onclick="display('%')">
